--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Classes/Libraries/PHPCrawl"]
 	path = Classes/Libraries/PHPCrawl
-	url = git@github.com:mmerian/phpcrawl.git
+	url = git@github.com:merzilla/phpcrawl.git
