--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "ralf.merz@inm.ch"
         }
     ],
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "autoload": {
+        "psr-4": {
+            "INM\\InmGooglesitemap\\": "Classes"
+        }
+    }
 }
