--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "typo3-cms-extension",
     "homepage": "https://www.inm.ch",
     "license": "GPL-2.0+",
+    "version": "0.5.0",
     "keywords": ["TYPO3 CMS", "SEO, Google sitemap.xml"],
     "authors": [
         {
@@ -12,7 +13,8 @@
         }
     ],
     "require": {
-        "typo3/cms-core": ">=6.2"
+        "typo3/cms-core": ">=9.5",
+        "php": "^7.2"
     },
     "replace": {
         "inm_googlesitemap": "self.version",
