--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "typo3-cms-extension",
     "homepage": "https://www.plan-net.ch",
     "license": "GPL-2.0+",
-    "version": "0.5.1",
-    "keywords": ["TYPO3 CMS", "SEO, Google sitemap.xml"],
+    "version": "0.5.2",
+    "keywords": ["TYPO3 CMS", "SEO","Google XML sitemap"],
     "authors": [
         {
             "name": "Ralf Merz",
